fix: decorator adjustments
