# src/domain/files/files.controller.ts
@@ -1,8 +1,7 @@
 import { ApiController } from '@/core/decorators/api-controller.decorator';
 import { ApiEndpoint } from '@/core/decorators/methods.decorator';
-import { UploadedFile, UseInterceptors } from '@nestjs/common';
+import { UploadedFile } from '@nestjs/common';
 import { CommandBus } from '@nestjs/cqrs';
-import { FileInterceptor } from '@nestjs/platform-express';
 import { CreateFileDto } from './dtos/create-file.dto';
 import { ReadFileDto } from './dtos/read-file.dto';
 import { CreateFileCommand } from './use-cases/commands/create-file.command';
@@ -15,6 +14,7 @@ export class FilesController {
     method: 'POST',
     path: '/create',
     summary: 'Create a file',
+    operationId: 'createFile',
     responseType: ReadFileDto,
     bodyType: CreateFileDto,
     successDescription: 'File successfully created',
