# src/domain/users/services/user.service.ts
@@ -7,18 +7,22 @@ import { RoleEnum } from 'src/core/enums/role.enum';
 import { AppError } from 'src/core/errors/app.error';
 import { generateHashPassword } from 'src/core/utils/generatePassword';
 import { CreateUserDto } from '../dtos/create-user.dto';
+import { PatchUserDto } from '../dtos/patch-user.dto';
+import { UpdateUserDto } from '../dtos/update-user.dto';
 
 @Injectable()
 export class UserService {
   constructor(private readonly prisma: PrismaService) {}
 
-  async initAdminUser(): Promise<void> {
-    const isAdminUser = await this.prisma.users.count({
+  private users = this.prisma.users;
+
+  async initAdmin(): Promise<void> {
+    const isAdminUser = await this.users.count({
       where: { deletedAt: null, roles: { type: 'ADMIN' } },
     });
 
     if (!isAdminUser) {
-      await this.createUser({
+      await this.create({
         name: process.env.ADMIN_NAME,
         email: process.env.ADMIN_EMAIL,
         password: process.env.ADMIN_PASSWORD,
@@ -27,8 +31,8 @@ export class UserService {
     }
   }
 
-  async checkEmailUser(email: string): Promise<boolean> {
-    const checkEmail = await this.prisma.users.count({
+  async checkEmail(email: string): Promise<boolean> {
+    const checkEmail = await this.users.count({
       where: { deletedAt: null, email: email },
     });
 
@@ -38,7 +42,7 @@ export class UserService {
     return false;
   }
 
-  async createUser(createUserDto: CreateUserDto): Promise<Users> {
+  async create(createUserDto: CreateUserDto): Promise<Users> {
     try {
       const { password, role, ...data } = createUserDto;
 
@@ -56,7 +60,7 @@ export class UserService {
 
       const hashedPassword = generateHashPassword(password);
 
-      return await this.prisma.users.create({
+      return await this.users.create({
         data: {
           ...data,
           roles: {
@@ -74,7 +78,7 @@ export class UserService {
     }
   }
 
-  async findUserByUuid(uuid: string): Promise<{
+  async findByUuid(uuid: string): Promise<{
     uuid: string;
     name: string;
     email: string;
@@ -87,7 +91,7 @@ export class UserService {
     };
   }> {
     try {
-      return await this.prisma.users.findUnique({
+      return await this.users.findUnique({
         where: { uuid },
         select: {
           uuid: true,
@@ -113,7 +117,7 @@ export class UserService {
     }
   }
 
-  async findUserAuthByUuid(uuid: string): Promise<{
+  async findAuthByUuid(uuid: string): Promise<{
     uuid: string;
     name: string;
     email: string;
@@ -126,7 +130,7 @@ export class UserService {
     };
   }> {
     try {
-      return await this.prisma.users.findUnique({
+      return await this.users.findUnique({
         where: { uuid },
         select: {
           uuid: true,
@@ -152,7 +156,7 @@ export class UserService {
     }
   }
 
-  async findUserByEmail(email: string): Promise<{
+  async findByEmail(email: string): Promise<{
     uuid: string;
     name: string;
     email: string;
@@ -165,7 +169,7 @@ export class UserService {
     };
   }> {
     try {
-      return await this.prisma.users.findUnique({
+      return await this.users.findUnique({
         where: { email },
         select: {
           uuid: true,
@@ -191,9 +195,26 @@ export class UserService {
     }
   }
 
-  async updateUser(uuid: string, data: Partial<Users>): Promise<Users> {
+  async patch(uuid: string, data: PatchUserDto): Promise<Users> {
     try {
-      return await this.prisma.users.update({
+      return await this.users.update({
+        where: {
+          uuid,
+        },
+        data,
+      });
+    } catch (error) {
+      throw new AppError({
+        statusCode: HttpStatusCodeEnum.BAD_REQUEST,
+        statusText: HttpStatusTextEnum.BAD_REQUEST,
+        message: `${error}`,
+      });
+    }
+  }
+
+  async update(uuid: string, data: UpdateUserDto): Promise<Users> {
+    try {
+      return await this.users.update({
         where: { uuid },
         data,
       });
@@ -206,9 +227,9 @@ export class UserService {
     }
   }
 
-  async deleteUser(uuid: string): Promise<void> {
+  async delete(uuid: string): Promise<void> {
     try {
-      await this.prisma.users.delete({
+      await this.users.delete({
         where: { uuid },
       });
     } catch (error) {
@@ -220,7 +241,7 @@ export class UserService {
     }
   }
 
-  async softDeleteUser(uuid: string): Promise<void> {
+  async softDelete(uuid: string): Promise<void> {
     try {
       await this.prisma.users.update({
         where: { uuid },
